[gd_scene load_steps=4 format=3 uid="uid://dmbcibq55ymqq"]

[ext_resource type="Theme" uid="uid://ddt7f1d8nmrcc" path="res://octaThemeNew.tres" id="1_u3xha"]
[ext_resource type="Script" uid="uid://b5bbj6ywmidfn" path="res://Scripts/main_menu_button.gd" id="2_skt18"]

[sub_resource type="Curve" id="Curve_ce3w2"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[node name="play_button" type="Button"]
z_index = 1
offset_left = -226.0
offset_top = 218.94
offset_right = 374.0
offset_bottom = 298.94
pivot_offset = Vector2(300, 40)
theme = ExtResource("1_u3xha")
theme_override_font_sizes/font_size = 48
text = "MENU
"
script = ExtResource("2_skt18")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
z_index = -1
position = Vector2(596.835, 35.06)
emission_shape = 3
emission_rect_extents = Vector2(1, 25)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 500.0
initial_velocity_max = 500.0
angular_velocity_min = -150.0
angular_velocity_max = 150.0
scale_amount_min = 20.0
scale_amount_max = 20.0
scale_amount_curve = SubResource("Curve_ce3w2")
color = Color(0.585062, 0.585062, 0.585062, 1)

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
z_index = -1
position = Vector2(9, 33.06)
rotation = 3.14159
emission_shape = 3
emission_rect_extents = Vector2(1, 25)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 500.0
initial_velocity_max = 500.0
angular_velocity_min = -150.0
angular_velocity_max = 150.0
scale_amount_min = 20.0
scale_amount_max = 20.0
scale_amount_curve = SubResource("Curve_ce3w2")
color = Color(0.585062, 0.585062, 0.585062, 1)

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
